[gd_scene load_steps=4 format=2]

[ext_resource path="res://art/inventory.png" type="Texture" id=1]
[ext_resource path="res://misc/loottable.gd" type="Script" id=2]
[ext_resource path="res://inventory/inventory/lootcan.tscn" type="PackedScene" id=3]

[node name="loottable" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0.2, 0.156863, 0.156863, 1 )
position = Vector2( -11.4023, 0.80249 )
scale = Vector2( 13.9977, 8.8243 )
texture = ExtResource( 1 )

[node name="Position2D1" type="Position2D" parent="Sprite"]
position = Vector2( -49.8998, -48.1418 )

[node name="Position2D2" type="Position2D" parent="Sprite"]
position = Vector2( -28.9387, -47.7949 )

[node name="Position2D3" type="Position2D" parent="Sprite"]
position = Vector2( -8.66489, -48.8356 )

[node name="Position2D4" type="Position2D" parent="Sprite"]
position = Vector2( 12.468, -47.448 )

[node name="Position2D5" type="Position2D" parent="Sprite"]
position = Vector2( 32.2264, -47.1011 )

[node name="Position2D6" type="Position2D" parent="Sprite"]
position = Vector2( 52.1566, -47.7949 )

[node name="Position2D7" type="Position2D" parent="Sprite"]
position = Vector2( -49.5562, -20.0442 )

[node name="Position2D8" type="Position2D" parent="Sprite"]
position = Vector2( -28.5951, -19.6974 )

[node name="Position2D9" type="Position2D" parent="Sprite"]
position = Vector2( -8.14946, -19.6974 )

[node name="Position2D10" type="Position2D" parent="Sprite"]
position = Vector2( 12.8116, -19.3505 )

[node name="Position2D11" type="Position2D" parent="Sprite"]
position = Vector2( 32.57, -19.0036 )

[node name="Position2D12" type="Position2D" parent="Sprite"]
position = Vector2( 52.5002, -19.6974 )

[node name="Position2D13" type="Position2D" parent="Sprite"]
position = Vector2( -58.5105, -48.2018 )

[node name="Position2D14" type="Position2D" parent="Sprite"]
position = Vector2( -38.3885, -47.5045 )

[node name="Position2D15" type="Position2D" parent="Sprite"]
position = Vector2( -18.1147, -48.5452 )

[node name="Position2D16" type="Position2D" parent="Sprite"]
position = Vector2( 3.01823, -47.1576 )

[node name="Position2D17" type="Position2D" parent="Sprite"]
position = Vector2( 22.7766, -46.8107 )

[node name="Position2D18" type="Position2D" parent="Sprite"]
position = Vector2( 42.7068, -47.5045 )

[node name="Position2D19" type="Position2D" parent="Sprite"]
position = Vector2( -58.1669, -19.929 )

[node name="Position2D20" type="Position2D" parent="Sprite"]
position = Vector2( -38.0449, -19.407 )

[node name="Position2D21" type="Position2D" parent="Sprite"]
position = Vector2( -17.5992, -19.407 )

[node name="Position2D22" type="Position2D" parent="Sprite"]
position = Vector2( 3.36183, -19.0601 )

[node name="Position2D23" type="Position2D" parent="Sprite"]
position = Vector2( 23.1202, -18.7132 )

[node name="Position2D24" type="Position2D" parent="Sprite"]
position = Vector2( 43.0504, -19.407 )

[node name="Position2D25" type="Position2D" parent="Sprite"]
position = Vector2( -49.8998, -32.5349 )

[node name="Position2D26" type="Position2D" parent="Sprite"]
position = Vector2( -28.9387, -32.188 )

[node name="Position2D27" type="Position2D" parent="Sprite"]
position = Vector2( -8.66489, -33.2287 )

[node name="Position2D28" type="Position2D" parent="Sprite"]
position = Vector2( 12.468, -31.8411 )

[node name="Position2D29" type="Position2D" parent="Sprite"]
position = Vector2( 32.2264, -31.4942 )

[node name="Position2D30" type="Position2D" parent="Sprite"]
position = Vector2( 52.1566, -32.188 )

[node name="Position2D31" type="Position2D" parent="Sprite"]
position = Vector2( -49.5562, -4.43726 )

[node name="Position2D32" type="Position2D" parent="Sprite"]
position = Vector2( -28.5951, -4.09045 )

[node name="Position2D33" type="Position2D" parent="Sprite"]
position = Vector2( -8.14946, -4.09045 )

[node name="Position2D34" type="Position2D" parent="Sprite"]
position = Vector2( 12.8116, -3.74355 )

[node name="Position2D35" type="Position2D" parent="Sprite"]
position = Vector2( 32.57, -3.39665 )

[node name="Position2D36" type="Position2D" parent="Sprite"]
position = Vector2( 52.5002, -4.09045 )

[node name="Position2D37" type="Position2D" parent="Sprite"]
position = Vector2( -58.5105, -32.5949 )

[node name="Position2D38" type="Position2D" parent="Sprite"]
position = Vector2( -38.3885, -31.8976 )

[node name="Position2D39" type="Position2D" parent="Sprite"]
position = Vector2( -18.1147, -32.9383 )

[node name="Position2D40" type="Position2D" parent="Sprite"]
position = Vector2( 3.01823, -31.5507 )

[node name="Position2D41" type="Position2D" parent="Sprite"]
position = Vector2( 22.7766, -31.2038 )

[node name="Position2D42" type="Position2D" parent="Sprite"]
position = Vector2( 42.7068, -31.8976 )

[node name="Position2D43" type="Position2D" parent="Sprite"]
position = Vector2( -58.1669, -4.32206 )

[node name="Position2D44" type="Position2D" parent="Sprite"]
position = Vector2( -38.0449, -3.80005 )

[node name="Position2D45" type="Position2D" parent="Sprite"]
position = Vector2( -17.5992, -3.80005 )

[node name="Position2D46" type="Position2D" parent="Sprite"]
position = Vector2( 3.36183, -3.45316 )

[node name="Position2D47" type="Position2D" parent="Sprite"]
position = Vector2( 23.1202, -3.10626 )

[node name="Position2D48" type="Position2D" parent="Sprite"]
position = Vector2( 43.0504, -3.80005 )

[node name="Position2D49" type="Position2D" parent="Sprite"]
position = Vector2( -44.8231, -48.1418 )

[node name="Position2D50" type="Position2D" parent="Sprite"]
position = Vector2( -23.862, -47.7949 )

[node name="Position2D51" type="Position2D" parent="Sprite"]
position = Vector2( -3.58821, -48.8356 )

[node name="Position2D52" type="Position2D" parent="Sprite"]
position = Vector2( 17.5447, -47.448 )

[node name="Position2D53" type="Position2D" parent="Sprite"]
position = Vector2( 37.3031, -47.1011 )

[node name="Position2D54" type="Position2D" parent="Sprite"]
position = Vector2( 57.2333, -47.7949 )

[node name="Position2D55" type="Position2D" parent="Sprite"]
position = Vector2( -44.4795, -20.0442 )

[node name="Position2D56" type="Position2D" parent="Sprite"]
position = Vector2( -23.5184, -19.6974 )

[node name="Position2D57" type="Position2D" parent="Sprite"]
position = Vector2( -3.07278, -19.6974 )

[node name="Position2D58" type="Position2D" parent="Sprite"]
position = Vector2( 17.8883, -19.3505 )

[node name="Position2D59" type="Position2D" parent="Sprite"]
position = Vector2( 37.6467, -19.0036 )

[node name="Position2D60" type="Position2D" parent="Sprite"]
position = Vector2( 57.5769, -19.6974 )

[node name="Position2D61" type="Position2D" parent="Sprite"]
position = Vector2( -53.4338, -48.2018 )

[node name="Position2D62" type="Position2D" parent="Sprite"]
position = Vector2( -33.3118, -47.5045 )

[node name="Position2D63" type="Position2D" parent="Sprite"]
position = Vector2( -13.038, -48.5452 )

[node name="Position2D64" type="Position2D" parent="Sprite"]
position = Vector2( 8.09491, -47.1576 )

[node name="Position2D65" type="Position2D" parent="Sprite"]
position = Vector2( 27.8533, -46.8107 )

[node name="Position2D66" type="Position2D" parent="Sprite"]
position = Vector2( 47.7835, -47.5045 )

[node name="Position2D67" type="Position2D" parent="Sprite"]
position = Vector2( -53.0902, -19.929 )

[node name="Position2D68" type="Position2D" parent="Sprite"]
position = Vector2( -32.9682, -19.407 )

[node name="Position2D69" type="Position2D" parent="Sprite"]
position = Vector2( -12.5225, -19.407 )

[node name="Position2D70" type="Position2D" parent="Sprite"]
position = Vector2( 8.43851, -19.0601 )

[node name="Position2D71" type="Position2D" parent="Sprite"]
position = Vector2( 28.1969, -18.7132 )

[node name="Position2D72" type="Position2D" parent="Sprite"]
position = Vector2( 48.1271, -19.407 )

[node name="Position2D73" type="Position2D" parent="Sprite"]
position = Vector2( -44.8231, -32.5349 )

[node name="Position2D74" type="Position2D" parent="Sprite"]
position = Vector2( -23.862, -32.188 )

[node name="Position2D75" type="Position2D" parent="Sprite"]
position = Vector2( -3.58821, -33.2287 )

[node name="Position2D76" type="Position2D" parent="Sprite"]
position = Vector2( 17.5447, -31.8411 )

[node name="Position2D77" type="Position2D" parent="Sprite"]
position = Vector2( 37.3031, -31.4942 )

[node name="Position2D78" type="Position2D" parent="Sprite"]
position = Vector2( 57.2333, -32.188 )

[node name="Position2D79" type="Position2D" parent="Sprite"]
position = Vector2( -44.4795, -4.43726 )

[node name="Position2D80" type="Position2D" parent="Sprite"]
position = Vector2( -23.5184, -4.09045 )

[node name="Position2D81" type="Position2D" parent="Sprite"]
position = Vector2( -3.07278, -4.09045 )

[node name="Position2D82" type="Position2D" parent="Sprite"]
position = Vector2( 17.8883, -3.74355 )

[node name="Position2D83" type="Position2D" parent="Sprite"]
position = Vector2( 37.6467, -3.39665 )

[node name="Position2D84" type="Position2D" parent="Sprite"]
position = Vector2( 57.5769, -4.09045 )

[node name="Position2D85" type="Position2D" parent="Sprite"]
position = Vector2( -53.4338, -32.5949 )

[node name="Position2D86" type="Position2D" parent="Sprite"]
position = Vector2( -33.3118, -31.8976 )

[node name="Position2D87" type="Position2D" parent="Sprite"]
position = Vector2( -13.038, -32.9383 )

[node name="Position2D88" type="Position2D" parent="Sprite"]
position = Vector2( 8.09491, -31.5507 )

[node name="Position2D89" type="Position2D" parent="Sprite"]
position = Vector2( 27.8533, -31.2038 )

[node name="Position2D90" type="Position2D" parent="Sprite"]
position = Vector2( 47.7835, -31.8976 )

[node name="Position2D91" type="Position2D" parent="Sprite"]
position = Vector2( -53.0902, -4.32206 )

[node name="Position2D92" type="Position2D" parent="Sprite"]
position = Vector2( -32.9682, -3.80005 )

[node name="Position2D93" type="Position2D" parent="Sprite"]
position = Vector2( -12.5225, -3.80005 )

[node name="Position2D94" type="Position2D" parent="Sprite"]
position = Vector2( 8.43851, -3.45316 )

[node name="Position2D95" type="Position2D" parent="Sprite"]
position = Vector2( 28.1969, -3.10626 )

[node name="Position2D96" type="Position2D" parent="Sprite"]
position = Vector2( 48.1271, -3.80005 )

[node name="lootcan" parent="." instance=ExtResource( 3 )]
position = Vector2( -1.60144, 239.681 )
scale = Vector2( 3, 3 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( -9.97974, -0.0196991 )
current = true
zoom = Vector2( 1.4, 1.4 )

[node name="Button" type="Button" parent="."]
margin_left = 564.975
margin_top = 412.282
margin_right = 679.975
margin_bottom = 468.282
rect_scale = Vector2( 2, 2 )
text = "finish adventure"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="."]
margin_left = 386.355
margin_top = 441.431
margin_right = 445.355
margin_bottom = 476.431
rect_scale = Vector2( 2, 2 )
text = "loot all"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button3" type="Button" parent="."]
margin_left = 122.95
margin_top = 424.713
margin_right = 226.95
margin_bottom = 468.713
rect_scale = Vector2( 2, 2 )
text = "loot all green+"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button4" type="Button" parent="."]
margin_left = -118.028
margin_top = 427.683
margin_right = -22.0282
margin_bottom = 471.683
rect_scale = Vector2( 2, 2 )
text = "loot all blue+"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Node" type="Node" parent="."]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="Button4" to="." method="_on_Button4_pressed"]
